2020-08-14  Wenson Hsieh  <wenson_hsieh@apple.com>

        Unreviewed, revert r265213 and r265441
        https://bugs.webkit.org/show_bug.cgi?id=215089

        * WebKitTestRunner/ios/UIScriptControllerIOS.mm:
        (WTR::UIScriptControllerIOS::keyDown):

2020-08-14  Philippe Normand  <pnormand@igalia.com>

        [Flatpak SK] Enable GNOME keyring support in subversion
        https://bugs.webkit.org/show_bug.cgi?id=215498

        Reviewed by Sergio Villar Senin.

        * buildstream/elements/sdk/subversion.bst: Enable GNOME Keyring support, which pulls into libsecret.
        * flatpak/flatpakutils.py:
        (WebkitFlatpak.run_in_sandbox): Allow session dbus access to the host secret service.

2020-08-13  Brady Eidson  <beidson@apple.com>

        (WK2 only) gamepad mapping stops being reported as “standard” in new tabs.
        rdar://problem/66946505 and https://bugs.webkit.org/show_bug.cgi?id=215486

        Reviewed by Tim Horton.

        * TestWebKitAPI/Tests/mac/HIDGamepads.mm:

2020-08-13  Aakash Jain  <aakash_jain@apple.com>

        Regression(r265580): apply-watchlist is broken
        https://bugs.webkit.org/show_bug.cgi?id=215457

        Unreviewed infrastructure fix.

        * Scripts/webkitpy/common/config/watchlist:

2020-08-13  Aakash Jain  <aakash_jain@apple.com>

        [ews] email notifications should include Bugzilla link to the patch
        https://bugs.webkit.org/show_bug.cgi?id=215455

        Reviewed by Jonathan Bedard.

        * BuildSlaveSupport/ews-build/steps.py:
        (Bugzilla):
        (Bugzilla.patch_url): Method to generate patch url.
        (AnalyzeCompileWebKitResults.send_email_for_new_build_failure): Added link to the patch id.
        (AnalyzeLayoutTestsResults.send_email_for_new_test_failures): Ditto.
        (ConfigureBuild.add_patch_id_url):
        (ConfigureBuild.getPatchURL): Deleted.

2020-08-13  Aakash Jain  <aakash_jain@apple.com>
